@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<atcttool
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="image_types" purge="false">
+  <element value="Project"/>
+ </property>
+</atcttool>
